samples/_failures_safe/1761002319_244aab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e9d2282.c: In function ‘main’:
./samples/SAFE/__tmp_1e9d2282.c:139:32: error: ‘MAX_IN’ undeclared (first use in this function); did you mean ‘MAX_INPUT’?
  139 |                     char token[MAX_IN
      |                                ^~~~~~
      |                                MAX_INPUT
./samples/SAFE/__tmp_1e9d2282.c:139:32: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_1e9d2282.c:139:38: error: expected ‘]’ at end of input
  139 |                     char token[MAX_IN
      |                                      ^
      |                                      ]
./samples/SAFE/__tmp_1e9d2282.c:139:21: error: expected declaration or statement at end of input
  139 |                     char token[MAX_IN
      |                     ^~~~
./samples/SAFE/__tmp_1e9d2282.c:139:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1e9d2282.c:139:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1e9d2282.c:139:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1e9d2282.c:139:21: error: expected declaration or statement at end of input
